--- a/index.html
+++ b/index.html
@@ -10,29 +10,27 @@
     <title>Tech Challenge</title>
 </head>
 <body>
-    <nav id='nav'>
-        <img class='nav-logo' src='images/juno-logo.png'>
-        <a class='no-underline'><h5 style="color:#4A455C;">Course</h5></a>
-        <a class='no-underline'><h5 style="color:#4A455C;">About</h5></a>
-        <a class='no-underline'><h5 style="color:#4A455C;">Alumni</h5></a>
-        <a class='no-underline'><h5 style="color:#4A455C;">Blog</h5></a>
-    </nav>
+    <ul id='menu'>
+        <li><img class='nav-logo' src='images/juno-logo.png'></li>
+        <li><a><h5 style="color:#4A455C;">Course</h5></a></li>
+        <li><a><h5 style="color:#4A455C;">About</h5></a></li>
+        <li><a><h5 style="color:#4A455C;">Alumni</h5></a></li>
+        <li><a><h5 style="color:#4A455C;">Blog</h5></a></li>
+    </ul>
 
     <img class='head-image' src='images/image-1.jpg'>
 
     <div class='top-box'>
-        <p>
-            <h1>Tech Challenge</h1>
-            <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</h6>
-        </p>
+        <p><h1>Tech Challenge</h1></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</p>
     </div>
 
     <div class='blog-post'>
-        <p><h1 style="color:#4A455C;">Blog</h1></p>
+        <p><h2 style="color:#4A455C;">Blog</h2></p>
         <article>
             <img src='images/image-2.jpg'>
             <p><h6>MAR 9, 2019</h6></p>
-            <p><h3>Juno Tech Test</h3></p>
+            <p><h3>Juno Tech Test</h3>
             <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
             <button class='colored-button1' type='button'>Read more</button>
         </article>
@@ -43,7 +41,7 @@
             <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
             <button class='colored-button1' type='button'>Read more</button>
         </article>
-        <article>
+        <article class='about-us'>
             <img src='images/image-4.jpg'>
             <p><h3>About Us</h3></p>
             <p>Donec sodales dolor, dolor taciti venenatis quis ultricies? Platea tellus, lorem etiam ridiculus dapibus cum montes sit accumsan. Id tincidunt habitant nostra penatibus. Ante euismod tellus interdum urna ante. Fermentum volutpat ut vestibulum convallis semper ultrices ullamcorper ut turpis habitant. Mattis venenatis porttitor senectus est dapibus magna penatibus montes etiam? Platea tincidunt netus posuere platea gravida. Nec augue euismod habitasse curae;! Class ultrices fusce ipsum, eget pellentesque vehicula! Quam consequat.</p>
@@ -64,18 +62,21 @@
             <p>MAR 9, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
             <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
             <p>MAR 15, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
             <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
             <p>MAR 15, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
             <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <button class='uncolored-button' type='button'>Read more</button>
         </article>
     </div>
 
@@ -101,5 +102,6 @@
             <a><i class="fab fa-github"></i></a>
         </div>
     </footer>
+    
 </body>
 </html>
