--- a/index.html
+++ b/index.html
@@ -9,73 +9,79 @@
     <script src='https://kit.fontawesome.com/e6b6c3f0b6.js' crossorigin='anonymous'></script>
     <title>Tech Challenge</title>
 </head>
-<body>
-    <ul id='menu'>
-        <li><img class='nav-logo' src='images/juno-logo.png'></li>
-        <li><a><h5 style="color:#4A455C;">Course</h5></a></li>
-        <li><a><h5 style="color:#4A455C;">About</h5></a></li>
-        <li><a><h5 style="color:#4A455C;">Alumni</h5></a></li>
-        <li><a><h5 style="color:#4A455C;">Blog</h5></a></li>
-    </ul>
 
+<body>
+    <div id='menu'>
+        <ul>
+            <li><img class='nav-logo' src='images/juno-logo.png'></li>
+            <li><a><h5 style="color:#4A455C;">Course</h5></a></li>
+            <li><a><h5 style="color:#4A455C;">About</h5></a></li>
+            <li><a><h5 style="color:#4A455C;">Alumni</h5></a></li>
+            <li><a><h5 style="color:#4A455C;">Blog</h5></a></li>
+        </ul>
+    </div>
     <img class='head-image' src='images/image-1.jpg'>
 
     <div class='top-box'>
         <p><h1>Tech Challenge</h1></p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</p>
+        <p><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</h6></p>
     </div>
 
-    <div class='blog-post'>
-        <p><h2 style="color:#4A455C;">Blog</h2></p>
-        <article>
-            <img src='images/image-2.jpg'>
-            <p><h6>MAR 9, 2019</h6></p>
-            <p><h3>Juno Tech Test</h3>
-            <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
-            <button class='colored-button1' type='button'>Read more</button>
-        </article>
-        <article>
-            <img src='images/image-3.jpg'>
-            <p>MAR 15, 2019</p>
-            <p><h3>Juno Tech Test</h3></p>
-            <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
-            <button class='colored-button1' type='button'>Read more</button>
-        </article>
-        <article class='about-us'>
-            <img src='images/image-4.jpg'>
-            <p><h3>About Us</h3></p>
-            <p>Donec sodales dolor, dolor taciti venenatis quis ultricies? Platea tellus, lorem etiam ridiculus dapibus cum montes sit accumsan. Id tincidunt habitant nostra penatibus. Ante euismod tellus interdum urna ante. Fermentum volutpat ut vestibulum convallis semper ultrices ullamcorper ut turpis habitant. Mattis venenatis porttitor senectus est dapibus magna penatibus montes etiam? Platea tincidunt netus posuere platea gravida. Nec augue euismod habitasse curae;! Class ultrices fusce ipsum, eget pellentesque vehicula! Quam consequat.</p>
-        </article>
-        <article>
-            <img src='images/image-5.jpg'>
-            <p>APRIL 30, 2019</p>
-            <p><h3>Juno Tech Test</h3></p>
-            <p>Ac nec nam elit parturient potenti laoreet turpis. Volutpat nullam rhoncus tempus cubilia sagittis scelerisque est ornare accumsan elit semper! Neque interdum sollicitudin curae; torquent fringilla erat habitasse iaculis risus fames. Luctus aptent non cras.</p>
-            <button class='colored-button1' type='button'>Read more</button>
-        </article>
+    <div class='blog'>
+        <div class="blog-post">
+            <p><h2 style="color:#4A455C;">Blog</h2></p>
+            <article>
+                <img src='images/image-2.jpg'>
+                <p><h6 style="color: #FFF0E7">MAR 9, 2019</h6></p>
+                <p><h3>Juno Tech Test</h3>
+                <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+                <button class='colored-button1' type='button'>Read more</button>
+            </article>
+            <article>
+                <img src='images/image-3.jpg'>
+                <p><h6 style="color: #FFF0E7">MAR 15, 2019</h6></p>
+                <div class='info'>
+                    <p><h3>Juno Tech Test</h3></p>
+                    <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+                    <button class='colored-button1' type='button'>Read more</button>
+                </div>
+            </article>
+            <article class='about-us'>
+                <img src='images/image-4.jpg'>
+                <p><h3 style="color: #FFF0E7;">About Us</h3></p>
+                <p><h6>Donec sodales dolor, dolor taciti venenatis quis ultricies? Platea tellus, lorem etiam ridiculus dapibus cum montes sit accumsan. Id tincidunt habitant nostra penatibus. Ante euismod tellus interdum urna ante. Fermentum volutpat ut vestibulum convallis semper ultrices ullamcorper ut turpis habitant. Mattis venenatis porttitor senectus est dapibus magna penatibus montes etiam? Platea tincidunt netus posuere platea gravida. Nec augue euismod habitasse curae;! Class ultrices fusce ipsum, eget pellentesque vehicula! Quam consequat.</h6></p>
+            </article>
+            <article>
+                <img src='images/image-5.jpg'>
+                <p><h6>APRIL 30, 2019</h6></p>
+                <p><h3>Juno Tech Test</h3></p>
+                <p><h6>Ac nec nam elit parturient potenti laoreet turpis. Volutpat nullam rhoncus tempus cubilia sagittis scelerisque est ornare accumsan elit semper! Neque interdum sollicitudin curae; torquent fringilla erat habitasse iaculis risus fames. Luctus aptent non cras.</h6></p>
+                <button class='colored-button1' type='button'>Read more</button>
+            </article>
+        </div>
     </div>
 
     <div class='related-post'>
-        <p><h1>Related post:</h1></p>
+        <p><h2>Related post:</h2></p>
         <article>
             <img src='images/image-2.jpg'>
             <p>MAR 9, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
-            <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
             <p>MAR 15, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
-            <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
             <p>MAR 15, 2019</p>
             <p><h3>Juno Tech Test</h3></p>
-            <p>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</p>
+            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
     </div>
@@ -83,25 +89,30 @@
 
 <footer>
     <div class='footer'>
-        <img src='/images/Juno-logo-white.png'>
-        <p><h4>Juno Tech Test</h4></p>
-        <p>Auctor felis dignissim vitae neque eleifend dapibus placerat odio tempor senectus venenatis ornare! Sem donec aptent class porttitor.</p>
-        <a class='no-underline'>Course</a>
-        <a class='no-underline'>About</a>
-        <a class='no-underline'>Alumni</a>
-        <a class='no-underline'>Blog</a>
-        <p>© 2012-2019 Juno College of Technology</p>
+        <img src='/images/Juno-logo-white.png' class="image-responsive">
+        <p><h4 style="color:#FFFFFF;">Juno Tech Test</h4></p>
+        <p><h6 style="color:#FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et.</h6></p>
+        <a><h5 style="color:#FFFFFF;">Home</h5></a>
+        <a><h5 style="color:#FFFFFF;">Course</h5></a>
+        <a><h5 style="color:#FFFFFF;">About</h5></a>
+        <a><h5 style="color:#FFFFFF;">Alumni</h5></a>
+        <a><h5 style="color:#FFFFFF;">Blog</h5></a>
+        <p><h6 style="color:#FFFFFF;">© 2012-2019 Juno College of Technology</h6></p>
     </div>
+
     <div class='mailing-list'>
-        <p><h4>Join our mailing list</h4></p>
-        <input value='Your email address'>
-        <button class='colored-button2' type='button'>Subscribe</button>
-        <p>Malesuada nascetur ultricies curae; est. Fusce placerat est convallis.</p>
-        <a><i class="fab fa-facebook-f"></i></a>
-        <a><i class="fab fa-twitter"></i></a>
-        <a><i class="fab fa-instagram"></i></a>
-        <a><i class="fab fa-github"></i></a>
+        <form>
+            <label><h4 style="color:#FFFFFF;">Join our mailing list</h4></label>  
+            <input value='Your email address'>
+            <button class='colored-button2' type='submit'>Subscribe</button>
+        </form>
+        <p style="color:#FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit maecenas.</p>
+        <a><i id= social-media class="fab fa-facebook-f"></i></a>
+        <a><i id= social-media class="fab fa-twitter"></i></a>
+        <a><i id= social-media class="fab fa-instagram"></i></a>
+        <a><i id= social-media class="fab fa-github"></i></a>
     </div>
+    
 </footer>
 
 </html>
