fixed: divs and fonts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class='blog'>
-        <div class="blog-post">
+        <div class="blog-posts">
             <p><h2 style="color:#4A455C;">Blog</h2></p>
             <article>
                 <img src='images/image-2.jpg'>
