--- a/index.html
+++ b/index.html
@@ -23,65 +23,73 @@
     <img class='head-image' src='images/image-1.jpg'>
 
     <div class='top-box'>
-        <p><h1>Tech Challenge</h1></p>
-        <p><h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</h6></p>
+        <h1>Tech Challenge</h1>
+        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi voluptate sunt exercitationem, perspiciatis sed, sit nihil at quibusdam itaque deserunt dolorum possimus quod quo dicta quasi pariatur? Repudiandae, delectus quas.</h6>
     </div>
 
-    <div class='blog'>
-        <div class="blog-posts">
-            <p><h2 style="color:#4A455C;">Blog</h2></p>
+    <section class='blog'>
+        <h2 style="color:#4A455C;">Blog</h2>
+        <div>
+            <div class="blog-posts">
             <article>
-                <img src='images/image-2.jpg'>
-                <p><h6 style="color: #FFF0E7">MAR 9, 2019</h6></p>
-                <p><h3>Juno Tech Test</h3>
-                <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
-                <button class='colored-button1' type='button'>Read more</button>
-            </article>
-            <article>
-                <img src='images/image-3.jpg'>
-                <p><h6 style="color: #FFF0E7">MAR 15, 2019</h6></p>
-                <div class='info'>
-                    <p><h3>Juno Tech Test</h3></p>
-                    <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+                <div class="article-header">
+                    <img src='images/image-2.jpg'>
+                </div>
+                <div class="article-body">
+                    <h6 style="color: #FFF0E7">MAR 9, 2019</h6>
+                    <h3>Juno Tech Test</h3>
+                    <h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6>
                     <button class='colored-button1' type='button'>Read more</button>
                 </div>
             </article>
-            <article class='about-us'>
-                <img src='images/image-4.jpg'>
-                <p><h3 style="color: #FFF0E7;">About Us</h3></p>
-                <p><h6>Donec sodales dolor, dolor taciti venenatis quis ultricies? Platea tellus, lorem etiam ridiculus dapibus cum montes sit accumsan. Id tincidunt habitant nostra penatibus. Ante euismod tellus interdum urna ante. Fermentum volutpat ut vestibulum convallis semper ultrices ullamcorper ut turpis habitant. Mattis venenatis porttitor senectus est dapibus magna penatibus montes etiam? Platea tincidunt netus posuere platea gravida. Nec augue euismod habitasse curae;! Class ultrices fusce ipsum, eget pellentesque vehicula! Quam consequat.</h6></p>
+            <article>
+                <img src='images/image-3.jpg'>
+                <h6 style="color: #FFF0E7">MAR 15, 2019</h6>
+                <div class='info'>
+                    <h3>Juno Tech Test</h3>
+                    <h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6>
+                    <button class='colored-button1' type='button'>Read more</button>
+                </div>
             </article>
             <article>
                 <img src='images/image-5.jpg'>
-                <p><h6>APRIL 30, 2019</h6></p>
-                <p><h3>Juno Tech Test</h3></p>
-                <p><h6>Ac nec nam elit parturient potenti laoreet turpis. Volutpat nullam rhoncus tempus cubilia sagittis scelerisque est ornare accumsan elit semper! Neque interdum sollicitudin curae; torquent fringilla erat habitasse iaculis risus fames. Luctus aptent non cras.</h6></p>
+                <h6>APRIL 30, 2019</h6>
+                <h3>Juno Tech Test</h3>
+                <h6>Ac nec nam elit parturient potenti laoreet turpis. Volutpat nullam rhoncus tempus cubilia sagittis scelerisque est ornare accumsan elit semper! Neque interdum sollicitudin curae; torquent fringilla erat habitasse iaculis risus fames. Luctus aptent non cras.</h6>
                 <button class='colored-button1' type='button'>Read more</button>
             </article>
+            </div>
+            <div>
+            <article class='about-us'>
+                <img src='images/image-4.jpg'>
+                <h3 style="color: #FFF0E7;">About Us</h3>
+                <h6>Donec sodales dolor, dolor taciti venenatis quis ultricies? Platea tellus, lorem etiam ridiculus dapibus cum montes sit accumsan. Id tincidunt habitant nostra penatibus. Ante euismod tellus interdum urna ante. Fermentum volutpat ut vestibulum convallis semper ultrices ullamcorper ut turpis habitant. Mattis venenatis porttitor senectus est dapibus magna penatibus montes etiam? Platea tincidunt netus posuere platea gravida. Nec augue euismod habitasse curae;! Class ultrices fusce ipsum, eget pellentesque vehicula! Quam consequat.</h6>
+            </article>
+            </div>
         </div>
-    </div>
+    </section>
 
     <div class='related-post'>
         <p><h2>Related post:</h2></p>
         <article>
             <img src='images/image-2.jpg'>
-            <p>MAR 9, 2019</p>
-            <p><h3>Juno Tech Test</h3></p>
-            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+            <h6>MAR 9, 2019</h6>
+            <h3>Juno Tech Test</h3>
+            <h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
-            <p>MAR 15, 2019</p>
-            <p><h3>Juno Tech Test</h3></p>
-            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+            <h6>MAR 15, 2019</h6>
+            <h3>Juno Tech Test</h3>
+            <h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
         <article>
             <img src='images/image-3.jpg'>
-            <p>MAR 15, 2019</p>
-            <p><h3>Juno Tech Test</h3></p>
-            <p><h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6></p>
+            <h6>MAR 15, 2019</h6>
+            <h3>Juno Tech Test</h3>
+            <h6>Volutpat conubia, nec nisl conubia. Integer ut at leo augue euismod aliquam.</h6>
             <button class='uncolored-button' type='button'>Read more</button>
         </article>
     </div>
@@ -90,14 +98,14 @@
 <footer>
     <div class='footer'>
         <img src='/images/Juno-logo-white.png' class="image-responsive">
-        <p><h4 style="color:#FFFFFF;">Juno Tech Test</h4></p>
-        <p><h6 style="color:#FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et.</h6></p>
+        <h4 style="color:#FFFFFF;">Juno Tech Test</h4>
+        <h6 style="color:#FFFFFF;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et.</h6>
         <a><h5 style="color:#FFFFFF;">Home</h5></a>
         <a><h5 style="color:#FFFFFF;">Course</h5></a>
         <a><h5 style="color:#FFFFFF;">About</h5></a>
         <a><h5 style="color:#FFFFFF;">Alumni</h5></a>
         <a><h5 style="color:#FFFFFF;">Blog</h5></a>
-        <p><h6 style="color:#FFFFFF;">© 2012-2019 Juno College of Technology</h6></p>
+        <h6 style="color:#FFFFFF;">© 2012-2019 Juno College of Technology</h6>
     </div>
 
     <div class='mailing-list'>
