--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <footer>
         <div class="footer">
-            <img src="/images/Juno-logo-white.png" class="image-responsive">
+            <img src="images/Juno-logo-white.png" class="image-responsive">
             <div class="footer-text">
                 <p id="white" class="medium-size" >Juno Tech Test</p>
                 <p id="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et.</p>
